--- a/index.html
+++ b/index.html
@@ -338,32 +338,14 @@
           <h2>We're happy to hear from you</h2>
 
           <div class="row">
-            <form class="contact-form" action="mailer.php" method="post">
-
-              <div class="row">
-
-                <?php
-                  if($_GET['success'] == 1) {
-                    echo "<div class=\"form-messages success\">
-                      Thank you! Your message has been sent.
-                    </div>"
-                  }
-
-                  if($_GET['success'] == -1) {
-                    echo "<div class=\"form-messages error\">
-                      Oops! Something went wrong. Please try again!
-                    </div>"
-                  }
-                ?>
-
-              </div>
+            <form class="contact-form" action="https://formspree.io/briannalnash@gmail.com" method="post">
 
               <div class="row">
                 <div class="col span-1-of-3">
                   <label for="name">Name</label>
                 </div>
                 <div class="col span-2-of-3">
-                  <input id="name" type="text" name="name" value="name" placeholder="Your Name" required>
+                  <input id="name" type="text" name="name" placeholder="Your Name" required>
                 </div>
               </div>
 
@@ -372,7 +354,7 @@
                   <label for="email">Email</label>
                 </div>
                 <div class="col span-2-of-3">
-                  <input id="email" type="email" name="email" value="email" placeholder="Your Email" required>
+                  <input id="email" type="email" name="email" placeholder="Your Email" required>
                 </div>
               </div>
 
